implemented priority and over_date task logic
