# docs/swagger.json
@@ -316,6 +316,10 @@
                 "id": {
                     "type": "string"
                 },
+                "is_overdue": {
+                    "description": "Computed field",
+                    "type": "boolean"
+                },
                 "labels": {
                     "type": "array",
                     "items": {
